--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # The directory Mix will write compiled artifacts to.
 .elixir_ls/
+.vscode/
 /_build/
 
 # If you run "mix test --cover", coverage assets end up here.
